--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,64 @@
-#root {
+body {
+  background-color: aliceblue;
+  color: black;
+  padding: 1rem;
+  margin: 0 auto;
+  display: flex;
+  text-align: center;
+}
+
+.header {
+  font-size: 1.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+.label-new-item {
+  font-weight: bold;
+  color: black;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.new-item-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form-row {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+}
+
+.new-item-form input {
+  border: 2px solid hsl(200, 100%, 40%);
+  border-radius: 0.25em;
+  padding: 0.45em 0.5em;
+}
+.btn {
+  background-color: rgb(183, 242, 242);
+}
+.btn-delete {
+  margin-left: 1rem;
+  background: hsl(0, 100%, 40%, 0.1);
+  border: 1px solid hsl(0, 100%, 40%);
+  color: hsl(0, 100%, 40%);
+}
+
+.list {
+  margin: 0;
+  padding: 0;
+  margin-left: 1rem;
+  margin-right: 10rem;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+  align-items: flex-start;
+}
+
+/*#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -38,5 +98,5 @@
 }
 
 .read-the-docs {
-  color: #888;
-}
+  color: #888;}
+*/
